# markets

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  vercel.json  watchlist.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
analysts/: _indicator_math.py  endorsement_schema.py  fundamentals.py  news_sentiment.py  position_adjustment.py  position_signal.py  schemas.py  signals.py  technicals.py  valuation.py
analysts/data/: __init__.py  filings.py  fundamentals.py  news.py  prices.py  snapshot.py  social.py
api/: refresh.py
cli/: _errors.py  add_endorsement.py  add_ticker.py  list_watchlist.py  main.py  refresh.py  remove_ticker.py  show_ticker.py
data/: _dates.json
data/2026-05-04/: AAPL.json  BRK-B.json  GME.json  NVDA.json  V.json  _index.json  _status.json
endorsements/: log.py
frontend/: .env.example  .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ingestion/: __init__.py  errors.py  filings.py  fundamentals.py  http.py  manifest.py  news.py  prices.py  refresh.py  social.py
prompts/: synthesizer.md
prompts/personas/: buffett.md  burry.md  claude_analyst.md  lynch.md  munger.md  wood.md
routine/: __init__.py  entrypoint.py  git_publish.py  llm_client.py  memory_log.py  persona_runner.py  quota.py  run_for_watchlist.py  storage.py
scripts/: check_provenance.py
synthesis/: __init__.py  decision.py  dissent.py  synthesizer.py
tests/: conftest.py  test_cli_add.py  test_cli_errors.py  test_cli_readonly.py  test_cli_refresh.py  test_cli_remove.py  test_loader.py  test_schemas.py
watchlist/: loader.py
(+256 files in other folders)
