[project]
name = "markets"
version = "0.1.0"
description = "Personal stock research dashboard — backend"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
]

[project.scripts]
markets = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysts", "watchlist", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["analysts", "watchlist", "cli"]
branch = true
